--- a/webpage/webpage.html
+++ b/webpage/webpage.html
@@ -1,1 +1,268 @@
+<html>
+<head>
 
+<title>webpage</title>
+
+<meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="mystyle.css">
+
+
+</head>
+
+
+
+<body>
+<div class="header">
+
+<nav>
+  <a href="webpage.html"><img src="shopping.png" class="logo"></a>
+ <ul class="nav-links"> 
+  <li><a href="">Create Account</a></li>
+  <li><a href="">Login</a></li>
+  <li><a href="">Help</a></li>
+  <li><a href="">Become a Franchise</a></li>
+<li><a href=" "><i class="fa fa-shopping-cart"></i></a></li>
+<li><a href="https://www.google.com/maps/@15.4895756,78.4844403,15z">Address</a></li>
+</ul>
+</nav>
+
+</div>
+
+<nav>
+
+<div class="header1">
+
+<p>
+ <i class="fa fa-phone"></i>Order online or call us:+91 2412970071</p>
+<p>
+  <i class="fa fa-envelope">
+</i>Email us:
+<a href="" tabindex="0">xyz@gmail.com</a></p>
+<p>
+ <i class="fa fa-clock-o"></i>Working Hours: 10 AM - 6 PM</p>
+
+<div class="content">
+<h1>WELCOME</h1>
+</div>
+
+
+
+</div>
+<div class="topnav">
+<div class="search-container">
+<input type="text" placeholder="Search..">
+<button type="submit"><i class="fa fa-search"></i></button>
+
+</div>
+</div>
+
+</nav>
+
+
+
+<div class="navbar">
+<a href=" ">Home</a>
+<div class="dropdown">
+<button class="dropbtn">DairyProducts<i class="fa fa-caret-down"></i></button>
+<div class="dropdown-content">
+<a href="#">Cheese</a><br>
+<a href="#">Butter</a><br>
+<a href="#">Ghee</a><br>
+<a href="#">Dahi</a><br>
+<a href="#">Milk</a><br>
+<a href="#">Ice Cream</a><br>
+</div>
+</div>
+
+<div class="dropdown">
+<button class="dropbtn">Fruits and Vegetables<i class="fa fa-caret-down"></i></button>
+<div class="dropdown-content">
+<a href="#">fruits</a><br>
+<a href="#">vegetables</a><br>
+<a href="#">products</a>
+</div>
+</div>
+
+
+<div class="dropdown">
+<button class="dropbtn">Fast Foods<i class="fa fa-caret-down"></i></button>
+<div class="dropdown-content">
+<a href="#">Noodles</a><br>
+</div>
+</div>
+
+<div class="dropdown">
+<button class="dropbtn">Gulabjam Mix<i class="fa fa-caret-down"></i></button>
+<div class="dropdown-content">
+<a href="#">Gulabjam</a><br>
+</div>
+</div>
+
+<a href=" ">Contact</a>
+
+</div>
+
+
+
+<div class="top">
+<p> Top Selling Offers</p>
+</div>
+
+<div class="tab1">
+<div class="tab">
+<button class="tab links" onclick="openCity(event,'London')">Advertised Offers</button>
+<button class="tab links" onclick="openCity(event,'Paris')">Today Offers</button>
+</div>
+
+<div class="tabcontent1">
+<div id="London" class="tabcontent">
+<h3>Advertised Offers</h3>
+<p>offers of week.</p>
+</div>
+<div id="Paris" class="tabcontent">
+  <h3>Today Offers</h3>
+  <p>Offers for today.</p> 
+</div>
+</div>
+</div>
+
+<script>
+function openCity(evt, cityName) {
+  var i, tabcontent, tablinks;
+  tabcontent = document.getElementsByClassName("tabcontent");
+  for (i = 0; i < tabcontent.length; i++) {
+    tabcontent[i].style.display = "none";
+  }
+  tablinks = document.getElementsByClassName("tablinks");
+  for (i = 0; i < tablinks.length; i++) {
+    tablinks[i].className = tablinks[i].className.replace(" active", "");
+  }
+  document.getElementById(cityName).style.display = "block";
+  evt.currentTarget.className += " active";
+}
+</script>
+   
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+<a href="https://api.whatsapp.com/send?phone=51955081075&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202." class="float" target="_blank">
+<i class="fa fa-whatsapp my-float"></i>
+</a>
+<br>
+<br>
+<br>
+
+
+<div class="row">
+  <div class="column">
+    <h2>Registered<br>Address</h2>
+<br>
+<p>
+Reg office: xyzzy<br>
+Building Number: w4756<br>
+Ahmedabad Industrial area<br>
+Ahmadnagar-687587<br> 
+Maharashtra,India</p>
+
+  </div>
+  <div class="column">
+    <h2>About Us</h2>
+    <a href=" "><i class="arrow right"></i>    Our Story</a><br><br>
+    <a href=" "><i class="arrow right"></i>    Contact us</a><br><br>
+    <a href=" "><i class="arrow right"></i>    Careers</a><br><br>
+    <a href=" "><i class="arrow right"></i>    Franchise</a><br><br>
+  </div>
+  <div class="column">
+    <h2>Legal</h2><br>
+<a href=" "><i class="arrow right"></i>    Terms and Conditions</a><br><br>
+    <a href=" "><i class="arrow right"></i>    Privacy Policy</a><br><br>
+    <a href=" "><i class="arrow right"></i>    Return Policy</a><br><br>
+    <a href=" "><i class="arrow right"></i>    Certificates</a><br><br>
+  </div>
+  <div class="column">
+    <h2>Help</h2>
+
+<p>For Technical Support and Inquiries</p>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<a href=" "><i class="fa fa-envelope"></i> xyz@gmail.com</a><br>
+
+<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+
+<br>
+<a href=" "><i class="fa fa-clock-o"></i>  Working Hours 10Am-6Pm </a><br>
+<br>
+
+<a href=" "><i class="fa fa-phone"></i>  +91879586958</a>
+
+  
+  </div>
+<br>
+
+
+<div class="sub">
+<a href=" " class="float1">
+<i class="fa fa-facebook-square"></i>
+</a>
+
+<a href=" " class="float1">
+<i class="fa fa-instagram"></i>
+</a>
+
+<a href=" " class="float1">
+<i class="fa fa-twitter"></i>
+</a>
+
+<a href=" " class="float1">
+<i class="fa fa-linkedin"></i>
+</a><br>
+
+<a href=" " class="float1"><img src="PlayStore.png" class="logo"></a>
+<a href=" " class="float1"><img src="applestore.png" class="logo"></a>
+<br>
+
+
+</div>
+
+
+</div>
+
+<div class="footer">
+  <p>This website is developed by <a href="https://www.education4ol.in/">Education4ol</a></p>
+
+
+<button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-arrow-up"></i></button>
+
+<script>
+//Get the button
+var mybutton = document.getElementById("myBtn");
+
+// When the user scrolls down 20px from the top of the document, show the button
+window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+    mybutton.style.display = "block";
+  } else {
+    mybutton.style.display = "none";
+  }
+}
+
+// When the user clicks on the button, scroll to the top of the document
+function topFunction() {
+  document.body.scrollTop = 0;
+  document.documentElement.scrollTop = 0;
+}
+
+
+</script>
+
+
+</body>
+</html>
